k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend-app
  namespace: budget-tracker
spec:
  selector:
    matchLabels:
      app: frontend-app
  template:
    metadata:
      labels:
        app: frontend-app
    spec:
      containers:
      - name: frontend-app
        image: liszlisowni/budget-tracker-frontend:latest
        resources:
          requests:
            memory: "128Mi"
            cpu: "250m"
          limits:
            memory: "256Mi"
            cpu: "500m"
        ports:
        - containerPort: 443

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend-app
  namespace: budget-tracker
spec:
  selector:
    matchLabels:
      app: backend-app
  template:
    metadata:
      labels:
        app: backend-app
    spec:
      containers:
      - name: backend-app
        image: liszlisowni/budget-tracker-backend:latest
        resources:
          requests:
            memory: "128Mi"
            cpu: "250m"
          limits:
            memory: "256Mi"
            cpu: "500m"
        ports:
        - containerPort: 3000

---

apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: database-statefulset
  namespace: budget-tracker
spec:
  selector:
    matchLabels:
      app: database
  serviceName: database-svc
  replicas: 1
  template:
    metadata:
      labels:
        app: database
    spec:
      containers:
      - name: database
        image: mongo:latest
        ports:
        - containerPort: 27017
        volumeMounts:
        - name: database-data
          mountPath: /data/db
        resources:
          requests:
            memory: "128Mi"
            cpu: "250m"
          limits:
            memory: "256Mi"
            cpu: "500m"
  volumeClaimTemplates:
  - metadata:
      name: database-data
    spec:
      accessModes: [ "ReadWriteOnce" ]
      resources:
        requests:
          storage: 5Gi

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: redis
  namespace: budget-tracker
spec:
  selector:
    matchLabels:
      app: redis
  template:
    metadata:
      labels:
        app: redis
    spec:
      containers:
      - name: redis
        image: redis:latest
        command:
          - sh
          - -c
          - "redis-server --requirepass \"$REDIS_PASSWORD\""
        resources:
          requests:
            memory: "128Mi"
            cpu: "250m"
          limits:
            memory: "256Mi"
            cpu: "500m"
        ports:
        - containerPort: 6379
