k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend
spec:
  type: LoadBalancer
  selector:
    app: backend-app
  ports:
  - port: 3000
    targetPort: 3000

---

apiVersion: v1
kind: Service
metadata:
  name: frontend
spec:
  type: LoadBalancer
  selector:
    app: frontend-app
  ports:
  - port: 443
    targetPort: 443
