k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: budget-tracker-ingress
  labels:
    app.kubernetes.io/name: budget-tracker-ingress
spec:
  rules:
  - host: budget-tracker.local
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: frontend
            port: 
              number: 443
      - pathType: Prefix
        path: "/api"
        backend:
          service:
            name: backend
            port: 
              number: 3000
